Fixed rotating, didn't take parent into account properly (hmmm, I'm sure this worked before). That was bug #2516: http://projects.blender.org/tracker/?func=detail&atid=125&aid=2516&group_id=9

Also turned back some changes Ton did to drawing object constraint lines. Explained the why in a longish comment.